# happy-dancing-trees

./: .gitignore  CMakeLists.txt  README.md  canvas2d.cpp  canvas2d.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  monster.cpp  monster.h  rgba.h  settings.cpp  settings.h  submission.md  triangle  triangle.h
graphics/: camera.cpp  camera.h  shape 2.cpp
resources/shaders/: shader.frag
resources/shaders 2/: shaders.qrc
